[package]
name = "merkletree"
version = "0.1.0"
authors = ["Alexey <yatsew.alexey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#logs
log = { version = "0.4.11", features = ["release_max_level_warn", "max_level_debug"] }
env_logger = "0.8.1"
#error
anyhow = "1.0.34"
thiserror = "1.0"
#crypto
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
hex = "0.4.2"
#others
lazy_static = "1.4.0"

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3.3"
#memory
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
jemalloc-sys = { version = "0.3.2", features = ["stats"] }
jemalloc-ctl = "0.3.2"
libc = "0.2.80"

[[bench]]
name = "mt_update_benchmark"
path = "benches/merkletree_update_benchmark.rs"
harness = false

[[bench]]
name = "mt_create_benchmark"
path = "benches/merkletree_create_benchmark.rs"
harness = false

[lib]
bench = false

